# packages/types/orval.config.ts
@@ -53,6 +53,7 @@ export default defineConfig({
           "Restock",
           "WhatsappTemplates",
           "Addresses",
+          "Monitoring",
         ],
       },
     },
